[gd_scene load_steps=6 format=3 uid="uid://bl3kkbs7wes5n"]

[ext_resource type="Texture2D" uid="uid://brotkum7ek5td" path="res://Assets/cabin.png" id="1_37fdn"]
[ext_resource type="Script" path="res://scripts/cabin.gd" id="1_ro8p5"]
[ext_resource type="Texture2D" uid="uid://erhbttltlp0v" path="res://Assets/door.png" id="2_c1v1t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7djab"]
size = Vector2(141, 198)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pnsl4"]
polygon = PackedVector2Array(-5, 70, -155, 72, 155, 73)

[node name="Cabin" type="Area2D"]
script = ExtResource("1_ro8p5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-79.5, 27)
shape = SubResource("RectangleShape2D_7djab")

[node name="Cabin" type="Sprite2D" parent="."]
position = Vector2(0.500001, -3.5)
scale = Vector2(1.04333, 1.04667)
texture = ExtResource("1_37fdn")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_pnsl4")

[node name="Door" type="Button" parent="."]
offset_left = -133.0
offset_top = -20.0
offset_right = -45.0
offset_bottom = 78.0
focus_mode = 0
theme_override_colors/icon_hover_color = Color(0.241156, 0.241156, 0.241156, 1)
icon = ExtResource("2_c1v1t")
flat = true

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="button_down" from="Door" to="." method="_on_door_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
